[Bug #164927648] Remove extra white space
Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -17,7 +17,7 @@
   --limeColor: lime;
 }
 html, body{
-  width: 100vw !important;
+  max-width: 100vw !important;
   margin: 0;
   overflow-x: hidden !important;
 }
@@ -47,7 +47,7 @@ li {
 footer {
   background-color: rgba(59, 65, 72, 0.9);
   text-align: center;
-  width: 100vw;
+  max-width: 100vw;
   color: whitesmoke;
   bottom: 0;
 }
